--- a/Thermo_and_Fluid_Engineering_Lab_1_02.ipynb
+++ b/Thermo_and_Fluid_Engineering_Lab_1_02.ipynb
@@ -488,7 +488,7 @@
         "# 과제\n",
         "## 1번\n",
         "* Github에 회원가입한 후 아래의 저장소를 fork하시오.\n",
-        " * https://github.com/JinFree/Thermo-and-Fluid-Engineering-Lab.1\n",
+        " * https://github.com/PCLFT/Thermo-and-Fluid-Engineering-Lab.1\n",
         "\n",
         "## 2번\n",
         "* 파일 - 새 Python3 노트를 통해 새 노트북을 만드시오.\n",
@@ -499,8 +499,8 @@
         " * 다른 제목인 경우 미제출 처리 될 수 있음.\n",
         "* 아래 이메일로 Github Profile 주소를 보내시오.\n",
         " * 주소: domeano@naver.com\n",
-        " * 제목: 열유체공학실험-2016201278-왕진영\n",
-        " * 내용: https://github.com/JinFree\n",
+        " * 제목: 열유체공학실험-2016201278-김민성\n",
+        " * 내용: https://github.com/PCLFT\n",
         " * 다른 제목인 경우 미제출 처리 될 수 있음."
       ]
     },
