--- a/Thermo_and_Fluid_Engineering_Lab_1_02.ipynb
+++ b/Thermo_and_Fluid_Engineering_Lab_1_02.ipynb
@@ -498,7 +498,7 @@
         " * 열유체공학실험-2016201278-HW02\n",
         " * 다른 제목인 경우 미제출 처리 될 수 있음.\n",
         "* 아래 이메일로 Github Profile 주소를 보내시오.\n",
-        " * 주소: domeano@naver.com\n",
+        " * 주소: yourbrain@hanyang.ac.kr\n",
         " * 제목: 열유체공학실험-2016201278-김민성\n",
         " * 내용: https://github.com/PCLFT\n",
         " * 다른 제목인 경우 미제출 처리 될 수 있음."
